buildscript {
    dependencies {
        classpath 'org.ow2.asm:asm:9.2'
        classpath 'org.ow2.asm:asm-commons:9.2'
        classpath 'org.ow2.asm:asm-tree:9.2'
        classpath 'org.ow2.asm:asm-util:9.2'
    }
}

plugins {
    id 'maven-publish'
    id 'dev.architectury.loom' version '0.10.0-SNAPSHOT' apply false
    id 'com.matthewprenger.cursegradle' version '1.4.0' apply false
    id 'com.github.johnrengelman.shadow' version '7.0.0' apply false
}

allprojects {
    apply plugin: 'java'

    group = 'icyllis.modernui'
    archivesBaseName = 'ModernUI'

    java.toolchain.languageVersion = JavaLanguageVersion.of(17)

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
        compileOnly 'org.jetbrains:annotations:22.0.0'
    }

    java {
        withSourcesJar()
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.encoding = "UTF-8"
        it.options.release.set(17)
    }
}